# senacfinal

./: README.md  db.sqlite3  main.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.js
app/: admin.py  mixin.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_initial.py  0002_produto_user.py  0003_rename_categoria_categoria_nome_and_more.py  0003_rename_nome_categoria_nome_categoria_and_more.py  0004_alter_produto_preco.py  0005_alter_produto_preco.py
authentication/: admin.py  backend.py  forms.py  middleware.py  models.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_data_nascimento_and_more.py  0002_remove_user_cep_remove_user_cidade_and_more.py  0002_user_cep_user_cidade_user_data_nascimento_and_more.py  0003_alter_user_data_nascimento_alter_user_email_and_more.py  0003_alter_user_pais.py
backend/: constants.py  mixin.py  roles.py  settings.py  shortcuts.py  urls.py
registration/: cadastro.html  password_reset_complete.html  password_reset_done.html
templates/: home.html  index.html
templates/partials/: header.html  sidebar.html
templates/products/: adicionar_categoria.html  adicionar_fabricante.html  adicionar_produto.html  details_produto.html  editar_produto.html  home.html  listar_produto.html
templates/registration/: cadastro.html  login.html  password_reset_confirm.html  password_reset_email.html  password_reset_form.html
templates/static/css/: input.css  output.css
templates/static/geral/css/: index.css
(+10 files in other folders)
